<resources>
    <string name="app_name">VegeFinder</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--<string name="facebook_app_id">910588845712421</string>-->
    <string name="facebook_app_id">1727680564210294</string>
    <string name="google_maps_api_key">AIzaSyARP9mnW6i9FamSaTXyrwp_nxK2I88C1Oo</string>
    <string name="twitter_api_key">zo1q8ILVfcGzQXVSJruxLpn6o</string>
    <string name="twitter_secret_key">5hYGWmKvXHZZt3Wvpbo05rvQ8c5dDHXnbIonSMYK8TAhdIS4Yo</string>
    <string name="twitter_access_token_key">70347771-5dgtxyepLGNECGQXl0fy2Veu9cK8eRxyNP9NxoXDC</string>
    <string name="twitter_access_secret_key">8GF6MaquWxPo5kMuA52ocY2Oc42rej3Da2l9SvsvulAzz</string>

    <!--title strings-->
    <string name="title_profile">Your Profile</string>
    <string name="title_contact_us">Contact Us</string>
    <string name="title_register">Register New Account</string>
    <string name="title_verify">Enter Confirmation Code</string>
    <string name="title_add_photo">Upload a Photo</string>
    <string name="title_report">Report</string>
    <string name="title_account">My Account</string>
    <string name="title_review">Review</string>
    <string name="title_add_review">Add Review</string>

    <!--layout strings-->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="new_password">New Password</string>
    <string name="forgot">Forgot Password?</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="fb_login">Facebook Login</string>
    <string name="gplus_login">Google+ Login</string>
    <string name="skip_login">Skip Login</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="confirm_new_pass">Confirm Password</string>
    <string name="email">Email</string>
    <string name="country">Country</string>
    <string name="province">Province</string>
    <string name="city">City</string>
    <string name="sex">Gender</string>
    <string name="pref">Preference</string>
    <string name="save">Save</string>
    <string name="verify_code">Confirmation Code</string>
    <string name="verify_error">Code is incorrect. Please try again.</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_code">Confirmation Code</string>
    <string name="subtitle_verify">We sent you an email with a six-digit confirmation code. Enter the code below to confirm your registration.</string>
    <string name="title_forgot">Recover Password</string>
    <string name="subtitle_forgot">To reset your password, enter the username or email address you used to sign in.</string>
    <string name="username_or_email">Username or Email</string>
    <string name="reset_password">Reset Password</string>
    <string name="contact_us">Contact Us</string>
    <string name="subtitle_verify_forgot">We sent you an email with a six-digit confirmation code. Enter the code along with your new password below to continue.</string>
    <string name="change_password">Change Password</string>
    <string name="phone">Phone Number</string>
    <string name="name">Name</string>
    <string name="subject">Subject</string>
    <string name="message">Write your message…</string>
    <string name="report">Write your report…</string>
    <string name="submit">Submit</string>
    <string name="find_specific_place">Find Specific Place</string>
    <string name="browse_nearby_places">Browse Nearby Places</string>
    <string name="my_account">My Account</string>
    <string name="keyword_hint">Keyword</string>
    <string name="find_now">Find Now</string>
    <string name="find_region">Find Region</string>
    <string name="find_keyword">Find Keyword</string>
    <string name="filter">Filter</string>
    <string name="sort">Sort</string>
    <string name="select_all">Select All</string>
    <string name="clear">Clear</string>
    <string name="open_now">Open Now</string>
    <string name="rated_8">Rated 8+</string>
    <string name="bookmarked">Bookmarked</string>
    <string name="vegan">Vegan</string>
    <string name="vegeready">Vegeready</string>
    <string name="been_here">Been Here</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="show_result">Show Result</string>
    <string name="alphabet">Alphabet</string>
    <string name="distance">Distance</string>
    <string name="date">Date</string>
    <string name="price">Price</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="news_label">News and Ideas</string>
    <string name="see_more">See more</string>
    <string name="places_label">Your Saved Places</string>
    <string name="recommend_label">You Might Like</string>
    <string name="read_more">Read More</string>
    <string name="bookmark">Bookmark</string>
    <string name="check_in">Check-In</string>
    <string name="book">Book Now</string>
    <string name="call">Call</string>
    <string name="maps_and_directions">Maps and Directions</string>
    <string name="photos">Photos</string>
    <string name="add_photo">Add Photo</string>
    <string name="reviews">Reviews</string>
    <string name="report_problem">Report Problem with this Listing</string>
    <string name="call_title">Tap the number to call</string>
    <string name="check_in_facebook">Share on Facebook</string>
    <string name="check_in_twitter">Share on Twitter</string>
    <string name="check_in_status">What\'s good here?</string>
    <string name="directions">Directions</string>
    <string name="btn_gallery">Upload Photo</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="add_review_label">Tap to rate</string>
    <string name="review_hint">Write your review, min 140 character (optional)</string>
    <string name="submit_review">Submit your Review</string>
    <string name="review_title">Review Title</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_booking">My Booking</string>
    <string name="check_in_history">Check in History</string>
    <string name="offers">Offers</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="about">About</string>
    <string name="google_play">Rate Us on Google Play</string>
    <string name="logout">Logout</string>
    <string name="old_password">Old Password</string>
    <string name="price_starts_from">starts from</string>
    <string name="from_your_location"> km from your location</string>
    <string name="version">version 2.1</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</string>
    <string name="developed_by">developed by</string>
    <string name="success_booking">Your booking has been sent to this place, they will be contacting you shortly</string>
    <string name="add_review">Add Review</string>
</resources>
