<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.RestoListActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/filter_btn"
            android:layout_width="wrap_content"
            android:background="@color/translucentBlue25"
            android:layout_height="match_parent"
            android:text="@string/filter" />

        <Button
            android:id="@+id/sort_btn"
            android:layout_width="wrap_content"
            android:background="@color/translucentWater25"
            android:layout_height="match_parent"
            android:text="@string/sort" />

    </LinearLayout>

    <com.github.aakira.expandablelayout.ExpandableRelativeLayout
        android:id="@+id/layout_filter"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/translucentRed25"
        app:ael_duration="200"
        app:ael_interpolator="accelerate"
        app:ael_orientation="vertical"
        android:visibility="invisible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/select_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_all" />

                <Button
                    android:id="@+id/clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clear" />
            </LinearLayout>

            <!--line 1-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/open_now"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/open_now" />

                <CheckBox
                    android:id="@+id/rate_8"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/rated_8" />
            </LinearLayout>

            <!--line 2-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/bookmarked"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/bookmarked" />

                <CheckBox
                    android:id="@+id/been_here"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/been_here" />
            </LinearLayout>

            <!--line 3-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/vegan"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/vegan" />

                <CheckBox
                    android:id="@+id/vege"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/vegetarian" />
            </LinearLayout>

            <Button
                android:id="@+id/submit_filter"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/show_result" />

        </LinearLayout>
    </com.github.aakira.expandablelayout.ExpandableRelativeLayout>

    <com.github.aakira.expandablelayout.ExpandableRelativeLayout
        android:id="@+id/layout_sort"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/translucentOrange50"
        app:ael_duration="200"
        app:ael_interpolator="accelerate"
        app:ael_orientation="vertical"
        android:visibility="invisible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/alpha"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/alphabet" />

                <Button
                    android:id="@+id/distance"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/distance" />

                <Button
                    android:id="@+id/date"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/date" />

                <Button
                    android:id="@+id/price"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/price" />
            </LinearLayout>

            <RadioGroup
                android:id="@+id/sort_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/asc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/ascending" />

                <RadioButton
                    android:id="@+id/desc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/descending" />
            </RadioGroup>

            <Button
                android:id="@+id/submit_sort"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/show_result" />

        </LinearLayout>
    </com.github.aakira.expandablelayout.ExpandableRelativeLayout>

    <fragment
        android:id="@+id/resto_list_fragment"
        android:name="com.imajiku.vegefinder.fragment.RestoListFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        tools:layout="@layout/fragment_resto_list" />

</LinearLayout>
