<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.VerifyForgotActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/title_verify" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subtitle_verify"
        android:layout_below="@id/title"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_code"
        android:inputType="textEmailAddress"
        android:background="@drawable/selector_rounded_edittext"
        android:padding="12dip"
        android:layout_marginTop="12dp"
        android:layout_below="@id/subtitle"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:background="@drawable/selector_rounded_edittext"
        android:padding="12dip"
        android:layout_marginTop="12dp"
        android:layout_below="@id/code"/>

    <EditText
        android:id="@+id/confirm_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_new_pass"
        android:inputType="textPassword"
        android:background="@drawable/selector_rounded_edittext"
        android:padding="12dip"
        android:layout_marginTop="12dp"
        android:layout_below="@id/password"/>

    <Button
        android:id="@+id/change_pass_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_edittext"
        android:text="@string/change_password"
        android:padding="8dip"
        android:layout_below="@id/confirm_pass" />

</RelativeLayout>
