<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/accentGreenBg"
    tools:context=".activity.ForgotActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/app_bar"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/forget_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:text="@string/title_forgot" />

    <TextView
        android:id="@+id/forget_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subtitle_forgot"
        android:textColor="@color/white"
        android:layout_marginTop="12dp"
        android:layout_below="@id/forget_title"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/username_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/forget_subtitle"
        android:layout_marginTop="20dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/selector_rounded_edittext"
        android:hint="@string/username_or_email"
        android:padding="12dip" />

    <Button
        android:id="@+id/reset_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username_email"
        android:layout_marginTop="12dp"
        android:textColor="@color/white"
        android:background="@drawable/rounded_orange"
        android:padding="8dip"
        android:text="@string/reset_password" />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/reset_btn"
        android:textColor="@color/white"
        android:gravity="end"
        android:padding="12dp"
        android:text="@string/register" />

    <TextView
        android:id="@+id/contact_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/reset_btn"
        android:layout_toEndOf="@id/register"
        android:layout_toRightOf="@id/register"
        android:textColor="@color/white"
        android:gravity="end"
        android:padding="12dp"
        android:text="@string/contact_us" />
    </RelativeLayout>

    <include
        android:id="@+id/app_bar"
        layout="@layout/toolbar_img" />

</RelativeLayout>
