<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.imajiku.vegefinder.activity.FindPlaceActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/find_specific_place" />

    <Spinner
        android:id="@+id/country_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/country"
        android:background="@drawable/selector_rounded_edittext"
        android:padding="12dip"
        android:layout_marginTop="20dp"
        android:layout_below="@id/title"/>

    <Spinner
        android:id="@+id/province_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/province"
        android:background="@drawable/selector_rounded_edittext"
        android:padding="12dip"
        android:layout_marginTop="20dp"
        android:layout_below="@id/country_spinner"/>

    <Spinner
        android:id="@+id/city_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/city"
        android:background="@drawable/selector_rounded_edittext"
        android:padding="12dip"
        android:layout_marginTop="20dp"
        android:layout_below="@id/province_spinner"/>

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_optional"
        android:background="@drawable/selector_rounded_edittext"
        android:padding="12dip"
        android:layout_marginTop="20dp"
        android:layout_below="@id/city_spinner"/>

    <Button
        android:id="@+id/find_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_edittext"
        android:text="@string/find_now"
        android:padding="8dip"
        android:layout_below="@id/name" />

</RelativeLayout>
