<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/accentGreenBg50"
    tools:context="com.imajiku.vegefinder.activity.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/app_bar"
        android:paddingBottom="@dimen/activity_margin"
        android:paddingLeft="@dimen/activity_margin"
        android:paddingRight="@dimen/activity_margin"
        android:paddingTop="@dimen/activity_margin">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            android:text="@string/title_register" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_marginTop="20dp"
            android:background="@drawable/selector_rounded_edittext"
            android:hint="@string/username"
            android:padding="12dip" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/username"
            android:layout_marginTop="12dp"
            android:background="@drawable/selector_rounded_edittext"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="12dip" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email"
            android:layout_marginTop="12dp"
            android:background="@drawable/selector_rounded_edittext"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="12dip" />

        <EditText
            android:id="@+id/confirm_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:layout_marginTop="12dp"
            android:background="@drawable/selector_rounded_edittext"
            android:hint="@string/confirm_pass"
            android:inputType="textPassword"
            android:padding="12dip" />

        <Button
            android:id="@+id/regis_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/confirm_pass"
            android:layout_marginTop="12dp"
            android:textColor="@color/white"
            android:background="@drawable/rounded_orange"
            android:padding="8dip"
            android:text="@string/register" />
    </RelativeLayout>

    <include
        android:id="@+id/app_bar"
        layout="@layout/toolbar_img" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
