<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/accentGreenBg50"
    tools:context="com.imajiku.vegefinder.activity.VerifyActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/app_bar"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/verify_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:text="@string/title_verify" />

        <TextView
            android:id="@+id/verify_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/verify_title"
            android:layout_marginTop="12dp"
            android:textColor="@color/white"
            android:text="@string/subtitle_verify"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/verify_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/verify_subtitle"
            android:layout_marginTop="20dp"
            android:background="@drawable/selector_rounded_edittext"
            android:hint="@string/verify_code"
            android:padding="12dip" />

        <TextView
            android:id="@+id/error_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/verify_code"
            android:layout_marginTop="10dp"
            android:textColor="@color/translucentPink50" />

        <Button
            android:id="@+id/verify_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/error_text"
            android:layout_marginTop="12dp"
            android:textColor="@color/white"
            android:background="@drawable/rounded_orange"
            android:padding="8dip"
            android:text="@string/confirm" />
    </RelativeLayout>

    <include
        android:id="@+id/app_bar"
        layout="@layout/toolbar_img" />
</RelativeLayout>
